--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ header {
 section {
     width: 100vw;
     height: 80vh;
+    background: #f4f4f4;
 }
 
 .index-content {
@@ -54,7 +55,6 @@ section {
     left: 14%;
     top: 22.5%;
     width: 75%;
-    background: #fff;
 }
 
 .content {
