--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,81 @@ section {
 }
 /* ------------------ end of about-page ------------------ */
 
+/* ------------------ contact-page ------------------ */
+.contact-content {
+    position: relative;
+}
+
+.contact-content {
+    position: absolute;
+    left: 14%;
+    height: 80vh;
+}
+.content-title {
+    padding: 30px 0;
+    text-align: center;
+}
+
+.orangered {
+    color: #e8491d;
+}
+
+.dark-orange {
+    color: #78472C;
+}
+
+.contact-holder {
+    display: flex;
+    margin: 20px 0;
+    justify-content: space-between;
+}
+
+.contact-text {
+    width: 300px;
+    color: #78472C;
+    font-size: 40px;
+    margin: 20px 0;
+    padding: 30px 100px 0 0;
+}
+
+.contact-form {
+    display: block;
+    width: 550px;
+    padding: 15px;
+    border: 3px solid #a7b5be;
+    border-radius: 10px;
+    background: #fff;
+}
+
+
+.contact-form label {
+    margin: 120px 50px;
+    color: #78472C;
+    font-size: 25px;
+}
+
+.contact-form input, .contact-form textarea {
+    width: 80%;
+    margin: 4px 50px;
+    color: #78472C;
+    padding: 4px 0;
+    font-size: 16px;
+    border: 3px solid #a7b5be;
+    border-radius: 8px;
+}
+
+.contact-form #btn {
+    width: 80%;
+    margin: 8px 50px;
+    color: #e8491d;
+    padding: 8px 150px;
+    font-size: 25px;
+    background: #a7b5be;
+    border: 3px solid #a7b5be;
+    border-radius: 8px;
+}
+/* ------------------ end of contact-page ------------------ */
+
 /* ------------------ end of section ------------------ */
 
 /* ------------------ footer ------------------ */
