--- a/css/style.css
+++ b/css/style.css
@@ -159,14 +159,6 @@ section {
     text-align: center;
 }
 
-.orangered {
-    color: #e8491d;
-}
-
-.dark-orange {
-    color: #78472C;
-}
-
 .contact-holder {
     display: flex;
     margin: 20px 0;
@@ -219,6 +211,63 @@ section {
 }
 /* ------------------ end of contact-page ------------------ */
 
+/* ------------------ blogs-page ------------------ */
+.blogs-content {
+    position: relative;
+}
+
+.blogs-content {
+    position: absolute;
+    left: 10%;
+    width: 80%;
+    height: 80vh;
+}
+.content-title {
+    padding: 30px 0;
+    text-align: center;
+}
+
+.blogs-row1, .blogs-row2 {
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    margin: 20px 0;
+}
+
+.blog-img {
+    width: 65%;
+}
+
+.blog-img:hover {
+    opacity: 60%;
+}
+
+.blog {
+    text-align: center;
+}
+
+.blog p {
+    color: #78472C;
+}
+
+.login-message {
+    position: relative;
+}
+.login-message {
+    position: absolute;
+    bottom: 15%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #78472C;
+    font-size: 22px;
+    font-weight: 400;
+}
+
+.login-message span a {
+    color: #e8491d;
+    text-decoration: none;
+}
+/* ------------------ end of blogs-page ------------------ */
 /* ------------------ end of section ------------------ */
 
 /* ------------------ footer ------------------ */
