--- a/css/style.css
+++ b/css/style.css
@@ -154,10 +154,6 @@ section {
     left: 14%;
     height: 80vh;
 }
-.content-title {
-    padding: 30px 0;
-    text-align: center;
-}
 
 .contact-holder {
     display: flex;
@@ -222,10 +218,7 @@ section {
     width: 80%;
     height: 80vh;
 }
-.content-title {
-    padding: 30px 0;
-    text-align: center;
-}
+
 
 .blogs-row1, .blogs-row2 {
     display: flex;
@@ -268,6 +261,67 @@ section {
     text-decoration: none;
 }
 /* ------------------ end of blogs-page ------------------ */
+
+/* ------------------ login-page ------------------ */
+.login-content {
+    position: absolute;
+    left: 14%;
+    height: 80vh;
+}
+
+.login-holder {
+    display: flex;
+    margin: 20px 0;
+    justify-content: space-between;
+}
+
+.login-text {
+    width: 300px;
+    color: #78472C;
+    font-size: 40px;
+    margin: 20px 0;
+    padding: 30px 100px 0 0;
+}
+
+.login-form {
+    display: block;
+    width: 550px;
+    padding: 15px;
+    border: 3px solid #a7b5be;
+    border-radius: 10px;
+    background: #fff;
+}
+
+
+.login-form label {
+    margin: 150px 50px;
+    color: #78472C;
+    font-size: 25px;
+}
+
+.login-form input {
+    width: 80%;
+    margin: 4px 50px;
+    color: #78472C;
+    padding: 4px 0;
+    font-size: 16px;
+    border: 3px solid #a7b5be;
+    border-radius: 8px;
+    outline: none;
+}
+
+.login-form #btn {
+    width: 80%;
+    margin: 50px 50px 0px 50px;
+    color: #e8491d;
+    padding: 8px 150px;
+    font-size: 25px;
+    background: #a7b5be;
+    border: 3px solid #a7b5be;
+    border-radius: 8px;
+    outline: none;
+}
+/* ------------------ end of login-page ------------------ */
 /* ------------------ end of section ------------------ */
 
 /* ------------------ footer ------------------ */
