--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,7 @@ section {
     color: #78472C;
     line-height: 2.3em;
     font-size: 19px;
+    width: 95%;
 }
 
 .more-infos a{
@@ -186,7 +187,7 @@ section {
 
 .technologies {
     width: 95%;
-    margin: 50px 0;
+    margin: 20px 0;
 }
 
 .techno-row1, .techno-row2 {
@@ -194,6 +195,10 @@ section {
     justify-content: space-between;
     list-style: none;
     margin: 20px 0;
+}
+
+.technologies img {
+    width: 90%;
 }
 /* ------------------ end of about-page ------------------ */
 
@@ -501,13 +506,12 @@ section {
 /* ------------------ end of admin-page ------------------ */
 /* ------------------ end of section ------------------ */
 
-/* ------------------ media querries for section ------------------ */
+/* ------------------ media querries for index ------------------ */
 @media(max-width: 1200px) {
     section {
         /* display: none; */
     }
 
-    /* ------------ index ---------- */
     .index-content {
         left: 10%;
         width: 80%;
@@ -591,7 +595,75 @@ section {
         margin: 10px;
     }
 }
-/* ------------------ end of media querrie for section ------------------ */
+/* ------------------ end of media querries for index ------------------ */
+/* ------------------ media querries for about ------------------ */
+
+@media(max-width: 1400px) {
+    .about-content {
+        left: 9%;
+    }
+}
+
+@media(max-width: 1200px) {
+    section {
+        /* display: none; */
+    }
+
+    .content-title {
+        padding: 10px 0;
+        text-align: center;
+    }
+}
+
+@media(max-width: 1000px) {
+    section {
+        /* display: none; */
+        width: fit-content;
+        height: fit-content;
+    }
+    .content-wrapper {
+        margin: 0;
+        display: block;
+    }
+    .content-title h2 {
+        margin: 0;
+    }
+
+    .content-title {
+        padding: 10px 0 0 0;
+    }
+
+    .about-content {
+        position: unset;
+    }
+    
+    .about-text {
+        margin: auto;
+        width: 90%;
+        height: fit-content;
+    }
+
+    .technologies {
+        /* display: block; */
+        padding-bottom: 10vh;
+        margin: auto;
+    }
+
+    .techno-row1, .techno-row2 {
+        width: 80%;
+    }
+
+    .technologies img {
+        width: 40%;
+    }
+}
+
+@media(max-width: 800px) {
+    section {
+        /* display: none; */
+    }
+}
+/* ------------------ end of media querrie for about ------------------ */
 
 /* ------------------ footer ------------------ */
 footer {
