--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body {
+body, .wrapper {
     margin: 0;
     padding: 0;
     width: 100vw;
@@ -162,7 +162,7 @@ section {
     left: 14%;
 }
 .content-title {
-    padding: 30px 0;
+    padding: 30px 0 0 0;
     text-align: center;
 }
 .orangered {
@@ -210,27 +210,31 @@ section {
 .contact-content {
     position: absolute;
     left: 14%;
-    height: 70vh;
-    overflow-y: hidden;
+    width: 75%;
+    height: fit-content;
 }
 
 .contact-holder {
+    width: 100%;
     display: flex;
-    margin: 20px 0;
     justify-content: space-between;
 }
 
 .contact-text {
-    width: 300px;
+    width: 10%;
+    margin-top: 0;
     color: #78472C;
     font-size: 40px;
-    margin: 20px 0;
-    padding: 30px 100px 0 0;
+}
+
+.contact-text p {
+    margin: 0;
+    padding: 0;
 }
 
 .contact-form {
+    width: 60%;
     display: block;
-    width: 550px;
     height: fit-content;
     padding: 15px;
     border: 3px solid #a7b5be;
@@ -260,7 +264,7 @@ section {
     width: 81%;
     margin: 0px 50px 30px 50px;
     color: #e8491d;
-    /* padding: 8px 150px; */
+    padding: 8px 150px;
     font-size: 20px;
     background: #a7b5be;
     border: 3px solid #a7b5be;
@@ -273,7 +277,7 @@ section {
 }
 .login-signup-message {
     position: absolute;
-    bottom: 12%;
+    bottom: 9%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: #78472C;
@@ -596,8 +600,8 @@ section {
     }
 }
 /* ------------------ end of media querries for index ------------------ */
-/* ------------------ media querries for about ------------------ */
 
+/* ------------------ media querries for about ------------------ */
 @media(max-width: 1400px) {
     .about-content {
         left: 9%;
@@ -630,7 +634,7 @@ section {
     }
 
     .content-title {
-        padding: 10px 0 0 0;
+        padding: 20px 0;
     }
 
     .about-content {
@@ -663,7 +667,97 @@ section {
         /* display: none; */
     }
 }
-/* ------------------ end of media querrie for about ------------------ */
+/* ------------------ end of media querries for about ------------------ */
+
+/* ------------------ media querries for contact ------------------ */
+@media(max-width: 1400px) {
+    
+}
+
+@media(max-width: 1200px) {
+    section {
+        /* display: none; */
+    }
+}
+
+@media(max-width: 1000px) {
+    section {
+        /* display: none; */
+        display: block;
+        width: 100%;
+        height: 80vh;
+        display: block;
+    }
+
+    .contact-content {
+        position: unset;
+        display: block;
+        width: 75%;
+        margin: auto;
+    }
+    
+    .contact-holder {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 10px;
+    }
+
+    .contact-text {
+        width: 19%;
+        margin: 20px 50px 0 0;
+        color: #78472C;
+        font-size: 30px;
+    }
+    .contact-form {
+        width: 70%;
+        margin-top: 20px;
+    }
+
+    .login-signup-message {
+        position: unset;
+    }
+    .login-signup-message {
+        text-align: end;
+        font-size: 20px;
+    }
+}
+
+@media(max-width: 850px) {
+    section {
+        display: none;
+        display: block;
+        width: 100%;
+        height: 120vh;
+        display: block;
+    }
+
+    .contact-holder {
+        flex-direction: column;
+        justify-content: center;
+        margin-bottom: 10px;
+    }
+
+    .contact-form label {
+        margin: 0px 20px;
+        font-size: 16;
+    }
+    
+    .contact-form input, .contact-form textarea {
+        margin: 0px 20px;
+    }
+
+    .contact-form #btn {
+    margin: 0px 50px 10px 20px;
+        padding: 8px 20px;
+        font-size: 16px;
+    }
+
+    .login-signup-message {
+        margin-left: 180px;
+        font-size: 16px;
+    }
+}
+/* ------------------ end of media querries for contact ------------------ */
 
 /* ------------------ footer ------------------ */
 footer {
