--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-body {
+body, .wrapper {
     margin: 0;
     padding: 0;
     width: 100vw;
@@ -17,6 +17,10 @@ header {
     justify-content:space-between;
     align-items: center;
     border-bottom: 5px solid #e8491d;
+}
+
+.logo-box img {
+    width: 80%;
 }
 
 .nav-menu {
@@ -98,6 +102,10 @@ section {
     background: #f4f4f4;
 }
 
+:focus {
+    outline: none;
+}
+
 /* ------------------ index-page ------------------ */
 
 .index-content {
@@ -118,12 +126,11 @@ section {
 }
 
 .image > img {
-    width: 350px;
-    height: 350px;
+    width: 100%;
 }
 
 .text {
-    margin-top: 50px;
+    margin-top: 0px;
     width: 60%;
 }
 
@@ -162,7 +169,7 @@ section {
     left: 14%;
 }
 .content-title {
-    padding: 30px 0;
+    padding: 20px 0 0 0;
     text-align: center;
 }
 .orangered {
@@ -177,6 +184,7 @@ section {
     color: #78472C;
     line-height: 2.3em;
     font-size: 19px;
+    width: 95%;
 }
 
 .more-infos a{
@@ -186,7 +194,9 @@ section {
 
 .technologies {
     width: 95%;
-    margin: 50px 0;
+    margin: 20px 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
 }
 
 .techno-row1, .techno-row2 {
@@ -195,37 +205,48 @@ section {
     list-style: none;
     margin: 20px 0;
 }
+
+.technologies img {
+    width: 30%;
+}
+
+.technologies li {
+    margin-top: 20px;
+    list-style: none;
+}
 /* ------------------ end of about-page ------------------ */
 
 /* ------------------ contact-page ------------------ */
 .contact-content {
-    position: relative;
-}
-
-.contact-content {
-    position: absolute;
-    left: 14%;
-    height: 70vh;
-    overflow-y: hidden;
+    width: 100%;
+    height: auto;
+    background: #f4f4f4;
 }
 
 .contact-holder {
-    display: flex;
-    margin: 20px 0;
+    margin: auto;
+    width: 80%;
+    height: fit-content;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     justify-content: space-between;
 }
 
 .contact-text {
-    width: 300px;
+    width: 15%;
     color: #78472C;
     font-size: 40px;
-    margin: 20px 0;
-    padding: 30px 100px 0 0;
+}
+
+.contact-text p {
+    margin: 0;
+    padding: 0;
 }
 
 .contact-form {
     display: block;
-    width: 550px;
+    width: 90%;
+    min-width: 400px;
     height: fit-content;
     padding: 15px;
     border: 3px solid #a7b5be;
@@ -248,32 +269,24 @@ section {
     font-size: 16px;
     border: 3px solid #a7b5be;
     border-radius: 8px;
-    outline: none;
 }
 
 .contact-form #btn {
     width: 81%;
-    margin: 0px 50px 30px 50px;
-    color: #e8491d;
-    /* padding: 8px 150px; */
     font-size: 20px;
+    color: #e8491d;
     background: #a7b5be;
     border: 3px solid #a7b5be;
     border-radius: 8px;
-    outline: none;
+    margin: 0px 50px 30px 50px;
 }
 
 .login-signup-message {
-    position: relative;
-}
-.login-signup-message {
-    position: absolute;
-    bottom: 12%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    text-align: center;
     color: #78472C;
     font-size: 22px;
     font-weight: 400;
+    background: #f4f4f4;
 }
 
 .login-signup-message span a {
@@ -284,26 +297,31 @@ section {
 
 /* ------------------ blogs-page ------------------ */
 .blogs-content {
-    position: relative;
+    /* position: relative; */
 }
 
 .blogs-content {
-    position: absolute;
-    left: 10%;
+    width: 100%;
+    height: auto;
+    background: #f4f4f4;
+}
+.blogs-holder {
+    margin: auto;
     width: 80%;
-    height: 80vh;
+    height: fit-content;
 }
 
 
-.blogs-row1, .blogs-row2 {
-    display: flex;
+.blogs-row {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     justify-content: space-between;
     list-style: none;
-    margin: 20px 0;
+    margin: 0px 0;
 }
 
 .blog-img {
-    width: 65%;
+    width: 60%;
 }
 
 .blog-img:hover {
@@ -314,36 +332,48 @@ section {
     text-align: center;
 }
 
-.blog p {
+.blog p, .blog p a {
     color: #78472C;
+    text-decoration: none;
+}
+
+.blog-paragraph {
+    text-align: justify;
 }
 
 /* ------------------ end of blogs-page ------------------ */
 
 /* ------------------ login-page ------------------ */
 .login-content {
-    position: absolute;
-    left: 14%;
-    height: 80vh;
+    width: 100%;
+    height: auto;
+    background: #f4f4f4;
 }
 
 .login-holder {
-    display: flex;
-    margin: 20px 0;
+    margin: auto;
+    width: 80%;
+    height: fit-content;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     justify-content: space-between;
 }
 
 .login-text {
-    width: 300px;
+    width: 15%;
     color: #78472C;
-    font-size: 40px;
-    margin: 20px 0;
-    padding: 30px 100px 0 0;
+    font-size: 30px;
+
 }
 
+.login-text p {
+    margin: 0;
+    padding: 0;
+}
 .login-form {
     display: block;
-    width: 550px;
+    width: 90%;
+    min-width: 400px;
     height: fit-content;
     padding: 15px;
     border: 3px solid #a7b5be;
@@ -353,59 +383,70 @@ section {
 
 
 .login-form label {
-    margin: 0 50px;
+    margin: 10px 50px;
     color: #78472C;
     font-size: 20px;
 }
 
 .login-form input {
     width: 80%;
-    margin: 0px 50px;
+    margin: 10px 50px;
     color: #78472C;
     padding: 4px 0;
     font-size: 16px;
     border: 3px solid #a7b5be;
     border-radius: 8px;
-    outline: none;
 }
 
 .login-form #btn {
     width: 81%;
-    color: #e8491d;
     font-size: 20px;
-    margin: 30px 50px 30px 50px;
-    padding: 8px 150px;
+    color: #e8491d;
     background: #a7b5be;
     border: 3px solid #a7b5be;
     border-radius: 8px;
-    outline: none;
+    margin: 30px 50px;
+}
+
+.login-admin-user a {
+    text-decoration: none;
+    color: #e8491d;
+    margin: 0 50px;
+    font-size: 20px;
 }
 /* ------------------ end of login-page ------------------ */
 
 /* ------------------ signup-page ------------------ */
 .signup-content {
-    position: absolute;
-    left: 14%;
-    height: 80vh;
+    width: 100%;
+    height: auto;
+    background: #f4f4f4;
 }
 
 .signup-holder {
-    display: flex;
-    margin: 20px 0;
+    margin: auto;
+    width: 80%;
+    height: fit-content;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     justify-content: space-between;
 }
 
 .signup-text {
-    width: 300px;
+    width: 15%;
     color: #78472C;
-    font-size: 40px;
-    margin: 20px 0;
-    padding: 30px 100px 0 0;
+    font-size: 30px;
+}
+
+.signup-text p {
+    margin: 0;
+    padding: 0;
 }
 
 .signup-form {
     display: block;
-    width: 550px;
+    width: 90%;
+    min-width: 400px;
     height: fit-content;
     padding: 15px;
     border: 3px solid #a7b5be;
@@ -414,7 +455,7 @@ section {
 }
 
 .signup-form label {
-    margin: 30px 50px;
+    margin: 10px 50px;
     color: #78472C;
     font-size: 20px;
 }
@@ -427,87 +468,104 @@ section {
     font-size: 16px;
     border: 3px solid #a7b5be;
     border-radius: 8px;
-    outline: none;
 }
 
 .signup-form #btn {
     width: 81%;
-    margin: 30px 50px 20px 50px;
+    margin: 30px 50px;
     color: #e8491d;
-    padding: 8px 150px;
     font-size: 20px;
     background: #a7b5be;
     border: 3px solid #a7b5be;
     border-radius: 8px;
-    outline: none;
 }
 /* ------------------ end of signup-page ------------------ */
 
 /* ------------------ admin-page ------------------ */
+.admin-content {
+    width: 100%;
+    height: auto;
+    background: #f4f4f4;
+    display: flex;
+}
+
 .admin-menu {
-    position: fixed;
-    left: 0;
-    top: 10.1vh;
-    width: 200px;
-    height: 79.9%;
+    width: 20%;
+    /* height: 70vh; */
     background: #fff;
 }
 
 .admin-menu p {
-    padding: 20px 0;
-    font-size: 22px;
+    padding: 5px 0;
     text-align: center;
+    font-size: 22px;
     color: #e8491d;
     user-select: none;
 }
 
 .admin-menu li {
+    margin: 0;
+    padding: 0;
+    list-style: none;
     border-bottom: 2px solid #f4f4f4;
 }
-.admin-menu ul a {
-    list-style: none;
+.admin-menu a {
     text-decoration: none;
-    text-align: center;
     font-size: 19px;
-    padding-left: 30px;
-    line-height: 60px;
+    line-height: 50px;
     box-sizing: border-box;
     color: #78472C;
 }
-.admin-holder {
-    position: absolute;
-    left: 18%;
-    width: 70%;
-    height: 60vh;
+
+.admin-menu .current-menu {
+    background: #f4f4f4;
 }
-.admin-row1, .admin-row2 {
-    display: flex;
-    justify-content: space-between;
-    list-style: none;
-    margin: 50px 30px;
+.admin-holder {
+    margin-left: 18%;
+    width: 75%;
+    height: fit-content;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    text-align: center;
 }
 
-.admin {
-    justify-content: center;
-    text-align: center;
-    width: 25%;
-    height: 140px;
-    background: #fff;
+.admin-box {
+    width: 60%;
+    height: fit-content;
+    margin: 2px;
     color: #78472C;
     border: 3px solid #a7b5be;
     border-radius: 10px;
-    padding-top: 20px;
+    background: #fff;
+}
+
+.admin img {
+    width: 10%;
+}
+
+.admin-holder table {
+    width: fit-content;
+    border: 2px solid #a7b5be;
+}
+
+th, tr, td {
+    padding: 15px;
+    color: #78472C;
+    border: 2px solid #a7b5be;
+}
+.admin2-holder {
+    width: 80%;
+    background: #a7b5be;
 }
 /* ------------------ end of admin-page ------------------ */
 /* ------------------ end of section ------------------ */
 
-/* ------------------ media querries for section ------------------ */
+/* ------------------ media querries for index ------------------ */
 @media(max-width: 1200px) {
     section {
         /* display: none; */
     }
 
-    /* ------------ index ---------- */
     .index-content {
         left: 10%;
         width: 80%;
@@ -520,8 +578,20 @@ section {
     }
     
     .text {
-        margin-top: 10px;
+        margin-top: 0px;
         width: 60%;
+    }
+
+    .text h3{
+        letter-spacing: 0.05em;
+        line-height: 2.0em;
+        font-size: 25px;
+    }
+
+    .highlight {
+        font-size: 30px;
+        margin: 0;
+        padding: 0;
     }
 
     .media {
@@ -540,17 +610,15 @@ section {
         margin: auto;
         width: 95%;
     }
-    .image > img {
-        width: 250px;
-        height: 250px;
-    }
     
     .text h3 {
         font-size: 22px;
+        text-align: center;
     }
     
     .highlight {
-        font-size: 30px;
+        font-size: 22px;
+        margin-left: 7%;
     }
     
     .social-media {
@@ -579,7 +647,7 @@ section {
     }
 
     .text {
-        margin-top: 10px;
+        margin-top: 0px;
         width: 100%;
         align-items: center;
     }
@@ -591,18 +659,392 @@ section {
         margin: 10px;
     }
 }
-/* ------------------ end of media querrie for section ------------------ */
+/* ------------------ end of media querries for index ------------------ */
+
+/* ------------------ media querries for about ------------------ */
+@media(max-width: 1400px) {
+    .about-content {
+        left: 9%;
+    }
+}
+
+@media(max-width: 1200px) {
+    section {
+        /* display: none; */
+    }
+
+    .content-title {
+        padding: 10px 0;
+        text-align: center;
+    }
+}
+
+@media(max-width: 1000px) {
+    section {
+        /* display: none; */
+        width: fit-content;
+        height: fit-content;
+    }
+    .content-wrapper {
+        margin: 0;
+        display: block;
+    }
+    .content-title h2 {
+        margin: 0;
+    }
+
+    .content-title {
+        padding: 20px 0;
+    }
+
+    .about-content {
+        position: unset;
+    }
+    
+    .about-text {
+        margin: auto;
+        width: 90%;
+        height: fit-content;
+    }
+
+    .about-text {
+        text-align: center;
+    }
+
+    .technologies {
+        width: 100%;
+        padding-bottom: 10vh;
+        margin: auto;
+    }
+
+    .technologies li {
+        text-align: center;
+    }
+}
+
+@media(max-width: 800px) {
+    section {
+        /* display: none; */
+    }
+}
+
+@media(max-width: 600px) {
+    section {
+        /* display: none; */
+    }
+
+    .about-text p {
+        font-size: 20px;
+    }
+
+    .technologies img {
+        width: 20%;
+    }
+}
+/* ------------------ end of media querries for about ------------------ */
+
+/* ------------------ media querries for contact ------------------ */
+@media(max-width: 1400px) {
+    
+}
+
+@media(max-width: 1000px) {
+    .wrapper {
+        background: #f4f4f4;
+    }
+
+    section {
+        /* display: none; */
+        margin: auto;
+    }
+
+    .contact-content {
+        margin: auto;
+    }
+
+    .contact-text {
+        font-size: 30px;
+    }
+}
+
+@media(max-width: 850px) {
+    section {
+        /* display: none; */
+    }
+
+    
+    @media(max-width: 580px) {
+        section {
+            /* display: none; */
+        }
+        .contact-form {
+            min-width: 300px;
+        }
+
+        .contact-form label {
+            margin: 10px 30px;
+            color: #78472C;
+            font-size: 20px;
+        }
+        
+        .contact-form input, .contact-form textarea {
+            margin: 10px 30px;
+            font-size: 16px;
+        }
+        
+        .contact-form #btn {
+            /* font-size: 20px; */
+            margin: 30px 30px;
+        }
+
+        .login-signup-message {
+            font-size: 18px;
+        }
+    }
+}
+/* ------------------ end of media querries for contact ------------------ */
+
+/* ------------------ media querries for blogs ------------------ */
+@media(max-width: 1200px) {
+    .login-signup-message {
+        padding-bottom: 10vh;
+    }
+}
+
+@media(max-width: 1000px) {
+    section {
+        margin: auto;
+    }
+}
+
+@media(max-width: 850px) {
+
+}
+/* ------------------ end of media querries for blogs ------------------ */
+
+/* ------------------ media querries for login ------------------ */
+@media(max-width: 1400px) {
+    
+}
+
+@media(max-width: 1000px) {
+    .wrapper {
+        background: #f4f4f4;
+    }
+
+    section {
+        /* display: none; */
+        margin: auto;
+    }
+
+    .login-content {
+        margin: auto;
+    }
+
+    .login-text {
+        width: 100%;
+        margin: 10px;
+        font-size: 20px;
+    }
+}
+
+@media(max-width: 850px) {
+    section {
+        /* display: none; */
+    }
+
+    
+    @media(max-width: 580px) {
+        section {
+            /* display: none; */
+        }
+
+        .login-holder {
+            justify-content: center;
+        }
+
+        .login-form {
+            min-width: 300px;
+        }
+
+        .login-form label {
+            margin: 10px 30px;
+            color: #78472C;
+            font-size: 20px;
+        }
+        
+        .login-form input {
+            margin: 10px 30px;
+            font-size: 16px;
+        }
+        
+        .login-form #btn {
+            font-size: 20px;
+            margin: 30px 30px;
+        }
+
+        .login-admin-user a {
+            margin: 0 30px;
+        }
+    }
+}
+/* ------------------ end of media querries for login ------------------ */
+
+/* ------------------ media querries for signup ------------------ */
+@media(max-width: 1400px) {
+    
+}
+
+@media(max-width: 1000px) {
+    .wrapper {
+        background: #f4f4f4;
+    }
+
+    section {
+        /* display: none; */
+        margin: auto;
+    }
+
+    .signup-content {
+        margin: auto;
+    }
+
+    .signup-text {
+        width: 100%;
+        margin: 10px;
+        font-size: 20px;
+    }
+}
+
+@media(max-width: 850px) {
+    section {
+        /* display: none; */
+    }
+
+    
+    @media(max-width: 580px) {
+        section {
+            /* display: none; */
+        }
+
+        .signup-holder {
+            justify-content: center;
+        }
+
+        .signup-form {
+            min-width: 300px;
+        }
+
+        .signup-form label {
+            margin: 8px 30px;
+            color: #78472C;
+            font-size: 20px;
+        }
+        
+        .signup-form input {
+            margin: 8px 30px;
+            font-size: 16px;
+        }
+        
+        .signup-form #btn {
+            font-size: 20px;
+            margin: 20px 30px;
+        }
+    }
+}
+/* ------------------ end of media querries for signup ------------------ */
+
+/* ------------------ media querries for admin ------------------ */
+@media(max-width: 1400px) {
+    .wrapper {
+        background: #f4f4f4;
+        margin: 0;
+        padding: 0;
+    }
+}
+
+@media(max-width: 1000px) {
+    section {
+        /* display: none; */
+    }
+
+    .admin-content {
+        width: 100vw;
+        /* background: wheat; */
+    }
+
+    .admin-menu {
+        width: 25%;
+    }
+}
+
+@media(max-width: 890px) {
+    section {
+        /* display: none; */
+    }
+
+    .admin-menu {
+        width: 30%;
+    }
+}
+
+@media(max-width: 700px) {
+    section {
+        /* display: none; */
+    }
+
+    .admin-menu {
+        width: 40%;
+    }
+}
+
+@media(max-width: 600px) {
+    section {
+        /* display: none; */
+    }
+
+    .admin-menu {
+        width: 50%;
+    }
+}
+
+@media(max-width: 550px) {
+    section {
+        /* display: none; */
+    }
+
+    .admin-menu {
+        width: 65%;
+    }
+}
+
+@media(max-width: 535px) {
+    section {
+        /* display: none; */
+    }
+
+    .admin-menu {
+        width: 70%;
+    }
+}
+/* ------------------ end of media querries for admin ------------------ */
 
 /* ------------------ footer ------------------ */
+footer {
+    position: relative;
+}
+
 footer {
     position: fixed;
     bottom: 0;
     width: 100vw;
-    height: 10%;
+    height: 9vh;
     background: #fff;
     color:#78472C;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-top: orangered solid 3px;
 }
+
 /* ------------------ footer ------------------ */
